src/objects/TargetOwnershipName__c.object
<CustomObject>
    <description>TON, or unique name with ownership.</description>
    <fields>
        <fullName>accountName__c</fullName>
        <formula>account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For relating a TON record to an Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Target Ownership Names</relationshipLabel>
        <relationshipName>TargetOwnershipNames</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>final__c</fullName>
        <label>Final</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jobId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Title Processing Job Id</description>
        <inlineHelpText>Title Processing Job Id</inlineHelpText>
        <label>Job Id</label>
        <referenceTo>TitleIntegrationJob__c</referenceTo>
        <relationshipLabel>Target Ownership Names</relationshipLabel>
        <relationshipName>Target_Ownership_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>landGridTract__c</fullName>
        <formula>jobId__r.landGridTract__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LandGridTract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <formula>&quot;/&quot;&amp;Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ownerName__c</fullName>
        <label>Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Target Ownership Name</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ownerName__c</columns>
        <columns>jobId__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>ownerName__c</columns>
        <columns>notes__c</columns>
        <columns>address__c</columns>
        <columns>final__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TON-{0000000000}</displayFormat>
        <label>Target Ownership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Ownership Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>